--- a/about2.html
+++ b/about2.html
@@ -18,8 +18,9 @@
             Log Out</a>
           <a href="index2.html">Home</a>
           <a href="about2.html" style="color:#f2bb85;">About Us</a>
-          <a href="artikel.html" >Artikel</a>
+          <a href="artikel2.html" >Artikel</a>
           <a href="contact2.html" >Contact Us</a>
+          <a href="profil.html">Profil</a>
         </div>
       </div>
      <div class="utama">
