--- a/artikel.html
+++ b/artikel.html
@@ -1,114 +1,142 @@
 <!DOCTYPE html>
-<html>
-	<head>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Bercocok Tani</title>
+    <link rel="stylesheet" href="artikel.css">
+  </head>
+  <body>
+    <div class="all">
+      <div class="kepala">
+        <div class="Judul">
+          <p>
+            <a href="index.html">Bercocok Tani</a>
+          </p>
+        </div>
+        <div class="menu1">
+          <a href="login.html" input type="submit" class="tombol_login" value="Login">
+            Login</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="artikel.html" style="color:#f2bb85;">Artikel</a>
+          <a href="contact.html">Contact Us</a>
+        </div>
+      </div>
+<div class="isi">
+      <section class="courrses">
+        <article>
+          <figure>
+            <img style="width: 220px; height:210px" src="seledri.jpg" alt="seledri" />
+            <figcaption>Sayur Indonesia</figcaption>
+          </figure>
+          <hgroup>
+            <h2><a href="daftar.html">Cara Menanam Seledri</a></h2>
+            <h3 style="color:#47b34f">Sayuran</h3>
+          </hgroup>
+          <p>Tanaman seledri bisa diperbanyak dengan cara generatif maupun vegetatif..
+          <br><br></p>
+          <a href="sayur seledri.html">Read more >>></a>
+        </article>    
+        <article>
+          <figure>
+            <img style="width: 220px; height: 210px" src="bayam merah.jpg" alt="bayam merah" />
+            <figcaption style="color:black">Sayur Indonesia</figcaption>
+          </figure>
+          <hgroup>
+            <h2><a href="daftar.html">Cara Menanam Bayam Merah di Polybag</a></h2>
+            <h3 style="color:#47b34f">Sayuran</h3>
+          </hgroup>
+          <p>Bayam merupakan salah satu jenis sayuran yang banyak digemari oleh masyarakat, hal ini dikarenakan bayam memiliki ..
+          <br>
+          <br></p>
+          <a href="daftar.html">Read more >>></a>
+        </article>
+        <article>
+          <figure>
+            <img style="width: 220px; height: 210px" src="pepaya.jpg" alt="seledri" />
+            <figcaption>Buah Indonesia</figcaption>
+          </figure>
+          <hgroup>
+            <h2><a href="daftar.html">Cara Menanam Pepaya di Pekarangan Rumah</a></h2>
+            <h3 style="color:#ed7b42">Buah - buahan</h3>
+          </hgroup>
+          <p>Dalam budidaya tanaman pepaya langkah awal yang perlu dilakukan adalah menyiapkan bibit. Bibit pepaya dapat diperoleh ..
+          <br>
+          <br></p>
+          <a href="daftar.html">Read more >>></a>
+        </article>  
+        <article><article>
+          <figure>
+            <img style="width: 220px; height: 210px" src="kelengkeng.jpg" alt="seledri" />
+            <figcaption>Buah Indonesia</figcaption>
+          </figure>
+          <hgroup>
+            <h2><a href="daftar.html">Cara Menanam Kelengkeng Merah Dalam Pot</a></h2>
+            <h3 style="color:#ed7b42">Buah- buahan</h3>
+          </hgroup>
+          <p>Kelengkeng Merah/ Ruby Longan tergolong kelengkeng yang eksklusif, karena memiliki keistimewaan pada tampilannya yang ..
+          <br>
+          <br></p>
+          <a href="daftar.html">Read more >>></a>
 
-		<title>Artikel Belajar Tani</title>
-		<link rel="stylesheet" href="artikel konten.css">
-	</head>
-	<body>
-		<div class="wrapper">
-			<section class="courses">
-				<article>
-					<figure>
-						<img style="width: 220px; height:210px" src="seledri.jpg" alt="seledri" />
-						<figcaption>Sayur Indonesia</figcaption>
-					</figure>
-					<hgroup>
-						<h2><a href="seledri.html">Cara Menanam Seledri</a></h2>
-						<h3 style="color:#47b34f">Sayuran</h3>
-					</hgroup>
-					<p>Tanaman seledri bisa diperbanyak dengan cara generatif maupun vegetatif..
-					<br>
-					<br>
-					<br><br></p>
-					<a href="seledri.html">Read more >>></a>
-				</article>    
-				<article>
-					<figure>
-						<img style="width: 220px; height: 210px" src="bayam merah.jpg" alt="bayam merah" />
-						<figcaption style="color:black">Sayur Indonesia</figcaption>
-					</figure>
-					<hgroup>
-						<h2><a href="bayam merah.html">Cara Menanam Bayam Merah di Polybag</a></h2>
-                        <h3 style="color:#47b34f">Sayuran</h3>
-					</hgroup>
-					<p>Bayam merupakan salah satu jenis sayuran yang banyak digemari oleh masyarakat, hal ini dikarenakan bayam memiliki ..
-					<br>
-					<br></p>
-					<a href="bayam merah.html">Read more >>></a>
-				</article>
-				<article>
-					<figure>
-						<img style="width: 220px; height: 210px" src="pepaya.jpg" alt="seledri" />
-						<figcaption>Buah Indonesia</figcaption>
-					</figure>
-					<hgroup>
-						<h2><a href="pepaya.html">Cara Menanam Pepaya di Pekarangan Rumah</a></h2>
-						<h3 style="color:#ed7b42">Buah - buahan</h3>
-					</hgroup>
-					<p>Dalam budidaya tanaman pepaya langkah awal yang perlu dilakukan adalah menyiapkan bibit. Bibit pepaya dapat diperoleh ..
-					<br>
-					<br></p>
-					<a href="pepaya.html">Read more >>></a>
-				</article>    
-				<article><article>
-					<figure>
-						<img style="width: 220px; height: 210px" src="kelengkeng.jpg" alt="seledri" />
-						<figcaption>Buah Indonesia</figcaption>
-					</figure>
-					<hgroup>
-						<h2><a href="kelengkeng.html">Cara Menanam Kelengkeng Merah Dalam Pot</a></h2>
-						<h3 style="color:#ed7b42">Buah- buahan</h3>
-					</hgroup>
-					<p>Kelengkeng Merah/ Ruby Longan tergolong kelengkeng yang eksklusif, karena memiliki keistimewaan pada tampilannya yang ..
-					<br>
-					<br></p>
-					<a href="kelengkeng.html">Read more >>></a>
+        </article>
+        <article><article>
+          <figure>
+            <img style="width: 220px; height: 210px" src="anggur.png" alt="seledri" />
+            <figcaption>Buah Indonesia</figcaption>
+          </figure>
+          <hgroup>
+            <h2><a href="daftar.html">Pembibitan Anggur</a></h2>
+            <h3 style="color:#ed7b42">Buah - buahan</h3>
+          </hgroup>
+          <p>Pembibitan tanaman anggur dapat dilakukan dengan berbagai cara, baik itu generatif seperti ..
+          <br>
+          <br></p>
+          <a href="daftar.html">Read more >>></a>
+        </article>
+        <article><article>
+          <figure>
+            <img style="width: 220px; height: 210px" src="kemangi.jpg" alt="seledri" />
+            <figcaption>Sayur Indonesia</figcaption>
+          </figure>
+          <hgroup>
+            <h2><a href="daftar.html">Cara Menanam Kemangi</a></h2>
+            <h3 style="color:#47b34f">Sayuran</h3>
+          </hgroup>
+          <p>Kemangi adalah salah satu jenis sayuran yang biasanya digunakan daunnya sebagai pelengkap dalam beberapa jenis masakan di Indonesia khususnya.
+          <br>
+          <br></p>
+          <a href="daftar.html">Read more >>></a>
+        </article>    
+      </section>
 
-				</article>
-				<article><article>
-					<figure>
-						<img style="width: 220px; height: 210px" src="anggur.png" alt="seledri" />
-						<figcaption>Buah Indonesia</figcaption>
-					</figure>
-					<hgroup>
-						<h2><a href="anggur.html">Pembibitan Anggur</a></h2>
-						<h3 style="color:#ed7b42">Buah - buahan</h3>
-					</hgroup>
-					<p>Pembibitan tanaman anggur dapat dilakukan dengan berbagai cara, baik itu generatif seperti ..
-					<br>
-					<br></p>
-					<a href="anggur.html">Read more >>></a>
-				</article>
-				<article><article>
-					<figure>
-						<img style="width: 220px; height: 210px" src="kemangi.jpg" alt="seledri" />
-						<figcaption>Sayur Indonesia</figcaption>
-					</figure>
-					<hgroup>
-						<h2><a href="kemangi.html">Cara Menanam Kemangi</a></h2>
-						<h3 style="color:#47b34f">Sayuran</h3>
-					</hgroup>
-					<p>Kemangi adalah salah satu jenis sayuran yang biasanya digunakan daunnya sebagai pelengkap dalam beberapa jenis masakan di Indonesia khususnya.
-					<br>
-					<br></p>
-					<a href="kemangi.html">Read more >>></a>
-				</article>    
-			</section>
-			<aside>
-				<section class="popular-recipes">
-					<h2 style="color:#f2bb85">Bercocok Tani</h2>
-					<a href="index.html">Home</a>
-					<a href="about.html">About Us</a>
-					<a href="artikel.html">Artikel</a>
-					<a href="contact.html">Contact Us</a>
-				</section>
-			</aside>
-			<footer>
-				<p style="font-size: 40px">&nbsp Bercocok Tani</p>
-				<hr width="100%">
-				<p style="margin-top:18px;margin-left: 18px">© 2019 Farm Indonesia. All Rights Reserved. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp PT. Belajar Tani Agriteknologi Nusantara</p>
-			</footer>
-		</div><!-- .wrapper -->
-	</body>
+       <div class="kaki">
+          <div class="logo2">
+            Belajar Tani
+          </div>
+          <div class="kontak">
+            <div class="kontak1">
+              © 2019 Farm Indonesia. All Rights Reserved.
+            <div class="info">
+              PT. Belajar Tani Agriteknologi Nusantara
+            </div>
+            </div>
+          </div>
+        </div>
+  </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
