--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8">
     <title>Bercocok Tani</title>
     <link rel="stylesheet" href="index.css">
+    <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
+
   </head>
   <body>
+
     <div class="all">
       <div class="kepala">
         <div class="Judul">
@@ -22,8 +25,9 @@
           <a href="contact.html">Contact Us</a>
         </div>
       </div>
+
       <div class="utama">
-        <p> "Buah yang manis hanya bisa dipetik dari pemilihan bibit yang baik dan cara menanam yang benar"</p>
+        <a target="_blank" href="">"Buah yang manis hanya bisa dipetik dari pemilihan bibit yang baik dan cara menanam yang benar"</a>
       </div>
 
 <div class="text-search">
