--- a/index2.html
+++ b/index2.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <title>Bercocok Tani</title>
     <link rel="stylesheet" href="index2.css">
+    
   </head>
   <body>
+
     <div class="all">
       <div class="kepala">
         <div class="Judul">
@@ -18,20 +20,22 @@
             Log Out</a>
           <a href="index2.html" style="color:#f2bb85;">Home</a>
           <a href="about2.html">About Us</a>
-          <a href="artikel.html">Artikel</a>
+          <a href="artikel2.html">Artikel</a>
           <a href="contact2.html">Contact Us</a>
+          <a href="profil.html">Profil</a>
         </div>
       </div>
       <div class="utama">
-        <p>"Buah yang manis hanya bisa dipetik dari pemilihan bibit yang baik dan cara menanam yang benar"</p>
-        <!-- <div class="mulai-belajar"> 
-          <div class="mulai-belajar-content">
-            <a href="artikel.html"><img src="diet.png"></a>
-            <a href="artikel.html" style="font-size: 30px; color:black">MULAI BELAJAR</a>
-          </div>
-        </div> -->
+        <a onclick="myFunction()" target="_blank">"Buah yang manis hanya bisa dipetik dari pemilihan bibit yang baik dan cara menanam yang benar"</a>
+        <script>
+function myFunction() {
+  alert("Selamat bercocok tani");
+}
+</script>
+
 
       </div>
+
 
 <div class="text-search">
   <p>Silahkan cari disini</p>
