--- a/kelengkeng.html
+++ b/kelengkeng.html
@@ -1,65 +1,164 @@
 <!DOCTYPE html>
-<html>
-  <head>
 
-    <title>Artikel Belajar Tani</title>
-    <link rel="stylesheet" href="kemangi.css">
-  </head>
-  <body>
-    <div class="wrapper">
-      <section class="courses">
-        <article>
-          <figure>
-            <img style="width: 300px; height:230px" src="kelengkeng.jpg" alt="bayam merah" >
-          </figure>
-          <hgroup>
-            <h2>Cara Menanam Kelengkeng Merah Dalam Pot</h2>
-            <h3 style="color:#47b34f">Sayuran</h3>
-          </hgroup>
-                  <p align="justify">Kelengkeng Merah/ Ruby Longan tergolong kelengkeng yang eksklusif, karena memiliki keistimewaan pada tampilannya yang berwarna sangat menarik yaitu merah, bahkan hampir semua  bagian pohon ini memiliki warna merah, mulai dari daun, batang hingga buahnya berwarna merah, dan juga memiliki tingkat kemanisan paling tinggi yaitu mencapai 21 bricks.Kelengkeng merah mampu tumbuh subur pada segala jenis dataran baik dataran rendah maupun tinggi.
-Kelengkeng ini sangat cocok ditanam pada pot atau sebagai  tabulampot, posturnya yang pendek dan posturnya yang rajih menjadi keunggulan tersendiri.
-Jika anda tertarik untuk menanamnya, berikut ini Cara Menanam Kelengkeng Merah Dalam Pot.</p>
-<br><p>PERSIAPAN MEDIA TANAM</p>
-<p align="justify">Dalam budidaya tanaman buah dalam pot atau tabulampot, media tanam yang baik merupakan satu syarat agar proses pertumbuhan tanaman lebih optimal, karena persediaan unsur hara yang dibutuhkan tanaman terbatas hanya dalam pot, tidak sebebas seperti tanaman yang ditanam langsung pada tanah.</p>
-<p>Adapun media tanam kelengkeng merah yang baik adalah dengan komposisi sebagai berikut:</p>
-<p align="justify">1.  Tanah ( usahakan tanah berpasir )</p>
-<p align="justify">2.  Pupuk kandang yang telah matang , pupuk kandang yang baik untuk tabulampot adalah pupuk kandang dari kotoran kambing karena pupuk ini dapat mengikat air dan mengandung unsur hara makro dan mikro yang lengkap, diantaranya kalium dan fosfor yang tinggi.</p>
-<p align="justify">3.  Arang sekam, arang sekam ini sangat baik sebagai campuran media tanam tabulampot, karena dapat membuat media tidak mudah padat, rongga dalam media lebih terbuka, sehingga proses aerasi/ pertukaran udara lebih lancar dan mempermudah proses penyerapan air. Selain itu arang sekam juga banyak mengandung unsur silica dan belerang yang baik untuk tanaman.</p>
-<p align="justify">4.  Kapur pertanian/dolomit, kapur ini berfungsi untuk menetralkan pH tanah.</p>
-<p align="justify">5.  Pupuk NPK yang berfungsi untuk mendukung proses pertumbuhan vegetatif awal tanaman dan pupuk TSP/SP36 yang berfungsi untuk merangsang pertumbuhan akar.</p>
-<p align="justify">Campurkan 3 komponen utama  yaitu tanah, pupuk kandang dan arang sekam dengan perbandingan 2:1:1, tambahkan pula dolomit ¼-1/2 kg per 1 planterbag/pot ukuran 100 liter. Campurkan semua bahan dan aduk hingga merata.
-Diamkan campuran media tersebut di tempat terbuka selama 1-2 minggu dengan tujuan untuk menetralisasi racun-racun yang masih ada dalam media, supaya dapat menguap ke udara.
-Media tanam yang sudah siap digunakan ditandai dengan tumbuhnya rumput-rumput liar di permukaan media tersebut.</p>
-<br><p>PERSIAPAN BIBIT</p>
-<p align="justify">Bibit tanaman merupakan hal  yang sangat menentukan tingkat keberhasilan tabulampot. Terdapat dua jenis bibit tanaman kelengkeng, yaitu bibit hasil perbanyakan generatif (dari biji) dan bibit hasil perbanyakan vegetatif (cangkok, okulasi dan penyambungan).</p>
-<p align="justify">Untuk budidaya tabulampot sebaiknya gunakan bibit hasil perbanyakan vegetatif. Kelebihan bibit hasil vegetatif yaitu sifat tanamannya bisa dipastikan, karena sama dengan sifat induknya. Selain itu, bibit perbanyakan vegetatif lebih cepat berbuah.
-Pilihlah bibit yang kita tahu persis sifat-sifatnya, sehat, dan juga bebas dari hama dan penyakit tanaman.
-Bibit kelengkeng merah yang siap tanam ditandai dengan bibit yang dorman atau tidak sedang tumbuh pupus/tunas baru dan tidak memiliki daun muda. Secara kasat mata terlihat semua daunnya tampak tua. Karena jika bibit ditanam saat aktif tumbuh tunas/pupus/daun muda bibit mudah stres.</p>
-<br><p>TAHAP PENANAMAN</p>
-<p align="justify">Siapkan pot/planterbag ukuran 50×50 atau kapasitas 100 liter sebagai wadah media tanam. Masukkan kerikil-kerikil atau pecahan genteng pada dasar pot, agar resapan air lebih optimal dan tidak menggenang di dalamnya.
-Masukkan media tanam ke dalam pot ¼ bagian terlebih dahulu, tambahkan pupuk dasar berupa pupuk NPK sebanyak 30 gram dan TSP 50 gram. Tambahkan kembali media hingga setengah bagian pot.
-Buka polybag bibit tanaman dengan hati-hati agar medianya tidak pecah, letakkan tepat ditengah-tengah pot, atur peletakan agar tanaman tegak lurus/tidak miring, timbun dengan media tanam yang sama hingga pangkal batang.
-Padatkan media tanam secara perlahan, pastikan tanaman sudah kuat tertopang, kemudian siram dengan air hingga jenuh untuk mempertahankan kelembaban.
-Simpan tabulampot di tempat yang agak teduh untuk beradaptasi. Siram setiap pagi atau sore hari. Setelah satu minggu, letakkan tabulampot di tempat terbuka.
-Demikian ulasan mengenai cara menanam kelengkeng merah dalam pot, semoga artikel ini dapat menambah wawasan dan bermanfaat untuk anda.</p>
-        </article>    
-      </section>
-      <aside>
-        <section class="popular-recipes">
-          <h2> <a href="artikel.html" style="color:#db5656">Article</a></h2>
-          <a href="seledri.html">Cara Menanam Seledri</a>
-          <a href="bayam merah.html">Cara Menanam Bayam Merah di Polybag</a>
-          <a href="pepaya.html">Cara Menanam Pepaya di Pekarangan Rumah</a>
-          <a style="color:#db5656" href="kelengkeng.html">Cara Menanam Kelengkeng Merah Dalam Pot</a>
-          <a href="anggur.html">Pembibitan Anggur</a>
-          <a href="kemangi.html">Cara Menanam Kemangi</a>
-        </section>
-      </aside>
-      <footer>
-        <p style="font-size: 40px">&nbsp Bercocok Tani</p>
-        <hr width="100%">
-        <p style="margin-top:18px;margin-left: 18px">© 2019 Farm Indonesia. All Rights Reserved. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp PT. Belajar Tani Agriteknologi Nusantara</p>
-      </footer>
-    </div><!-- .wrapper -->
-  </body>
+<html lang="en">
+
+
+
+<head>
+
+  <meta charset="utf-8">
+
+  <title>seledri</title>
+
+  <link href="kemangi.css" rel="stylesheet" type="text/css" />
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+  <script>
+
+    $(document).ready(function () {
+
+      $(".burger").click(function () {
+
+        $(".menu").toggle();
+
+      });
+
+    });
+
+  </script>
+
+
+
+</head>
+
+
+
+<body>
+  <div class="all">
+
+      <div class="kepala">
+        <div class="Judul">
+          <p>
+            <a href="index.html">Bercocok Tani</a>
+          </p>
+        </div>
+        <div class="menu1">
+          <a href="login.html" input type="submit" class="tombol_login" value="Logout">
+            Log Out</a>
+          <a href="index2.html">Home</a>
+          <a href="about2.html">About Us</a>
+          <a href="artikel.html" style="color:#f2bb85;">Artikel</a>
+          <a href="contact2.html">Contact Us</a>
+        </div>
+      </div>
+
+    <div class="search" style="text-align:center;">
+      <h3>SAYUR SELEDRI</h3>
+    </div>
+    <div class="gambar">
+      <img style="width: 500px; height: 300px; margin-left: 450px" src="seledri.jpg" alt="seledri">
+    </div>
+  </div>
+
+  <div class="border">
+
+      <b style="font-size: 40px; margin-left: 370px">Cara menanam seledri</b>
+
+      <div class="paragraf">
+
+        <p style="text-indent:50px"> Tanaman seledri bisa diperbanyak dengan cara generatif maupun vegetatif. Perbanyakan generatif yaitu perbanyakan tanaman seledri dengan cara menyemai biji atau benih, sedangkan perbanyakan vegetatif yaitu perbanyakan tanaman seledri dengan anakan atau seledri muda yang tumbuh pada rumpun seledri dewasa.</p><br>
+        Perbanyakan vegetatif biasanya dilakukan pada budidaya seledri skala kecil, seperti banyak dilakukan oleh para pehoby karena dengan menanam anakan bisa lebih cepat panen dan tidak perlu melakukan proses penyemaian. Sedangkan jika menanam seledri dalam skala luas atau sebagai usaha, pilihan terbaik adalah perbanyakan generatif yaitu dengan menyemai biji, karena
+
+        <span class="baca_selengkapnya">Baca Selengkapnya...</span>
+
+        <div class="pesan">
+
+        <p>
+          dengan cara ini bisa mendapatkan benih seledri dalam jumlah banyak dengan mudah. Adapun cara menanam seledri adalah sebagai berikut :
+<br><br>
+TAHAP PENYEMAIAN BENIH
+<br><br>
+Proses penyemaian benih seledri hingga siap dipindah tanam, memerlukan waktu 3 minggu sampai 1 bulan tergantung perlakuan awal saat melakukan proses penyemaian. Untuk itu dalam melakukan penyemaian harus dilakukan dengan benar agar benih lebih cepat tumbuh, berikut ini langkah-langkahnya :
+<br><br>
+1.Persiapan benih
+<br><br>
+Pilihlah benih seledri yang berkualitas unggul dan memiliki daya tumbuh yang tinggi. Benih seledri dapat didapatkan dengan mudah di toko-toko pertanian seperti SentraTani.com. Untuk mempercepat pertumbuhan, terlebih dahulu rendam benih menggunakan air yang telah dicampur dengan pupuk hayati dengan dosis 1-2 ml/liter air selama kurang lebih 6 jam, atau jika tidak ada cukup rendam menggunakan air hangat kuku. Tiriskan benih dan diamkan selama satu malam.
+<br><br>
+2.Persiapan media semai
+<br><br>
+Media semai yang digunakan adalah tanah, pupuk kandang, arang sekam dan abu sekam dengan perbandingan 2:2:2:1, aduk dan campurkan hingga merata. Wadah persemaian yang akan digunakan adalah tray semai. Masukkan media ke dalam tray semai, kemudian siram hingga merata.
+<br><br>
+3.Penanaman biji
+<br><br>
+Tanam biji seledri dengan membuat lubang tanam terlebih dahulu pada tray semai dengan kedalaman 0,5 cm. Masukkan 3-5 biji ke dalam setiap lubang tanam, karena biji seledri sangat kecil untuk memudahkan dalam penanaman dapat menggunakan pinset. 
+<br><br>
+Setelah selesai penanaman, siram kembali persemaian. Untuk mencegah datangnya hama semut, taburkan abu sekam atau abu pembakaran kayu di atas persemaian. Tutup persemaian menggunakan plastik gelap atau kain basah dan simpan di tempat teduh. Setelah 3 minggu dari persemaian biasanya benih sud ah tumbuh 2-5 cm.
+
+
+<br>
+<br>
+TAHAP PENANAMAN BIBIT/PINDAH TANAM
+<br><br>
+1.Persiapan lahan
+<br>
+<br>
+Gemburkan lahan dan buat bedengan dengan lebar 100 cm, tinggi 25-30 cm dan panjang sesuaikan dengan kondisi lahan. Karena tanaman seledri tidak membutuhkan sinar matahari dalam waktu yang lama, terlebih pada musim kemarau, maka dari itu buatlah naungan di atas bedengan menggunakan pelepah daun kelapa, paranet atau sejenisnya. 
+<br><br>
+Naungan dibuat menghadap ke timur dengan tinggi tiang depan 1-1,5 cm sedangkan tiang bagian belakang 50-75 cm. Berikan pupuk dasar pada bedengan menggunakan pupuk kandang sebanyak 1 kg/meter persegi, dengan cara menaburkannya di atas bedengan dan campurkan dengan tanah bedengan hingga merata. Rapikan kembali permukaan bedengan. Siram bedengan menggunakan air yang telah dicampur dengan pupuk hayati, dan bedengan siap ditanami.
+<br><br>
+2.Tahap penanaman
+<br><br>
+Siram bibit terlebih dahulu sebelum dipindah tanam tujuannya agar media mudah lepas dari tray semai dan proses pengambilan bibit menjadi lebih mudah. Penanaman dilakukan dengan mencongkel bibit dari tray semai beserta medianya dengan jarak tanam 20×20 cm. 
+<br><br>
+Untuk memudahkan penataan dalam penanaman, buatlah garis alur di atas bedengan. Jika bibit dalam satu lubang pot tray lebih dari satu, jangan dipisahkan terlebih dahulu, pemisahan dilakukan setelah tanaman tumbuh agak besar. Setelah selesai penanaman lakukan penyiraman, penyiraman selanjutnya dilakukan sebanyak 2 kali sehari, lakukan penyiraman secukupnya saja asal lembab. Demikian ulasan mengenai cara menanam seledri.
+         
+        </p>
+
+        </div>
+
+      </div>
+
+    </div>
+
+
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+  <script type="text/javascript">
+
+    $(document).ready(function() {
+
+    $(".pesan").hide();
+
+    $(".baca_selengkapnya").click(function(){
+
+      $(".pesan").slideDown('slow');
+
+      $(this).hide();
+
+    })
+
+    });
+
+  </script>
+
+
+<div class="kaki">
+          <div class="logo2">
+            Bercocok Tani
+          </div>
+          <div class="kontak">
+            <div class="kontak1">
+              © 2019 Farm Indonesia. All Rights Reserved.
+            <div class="info">
+              PT. Belajar Tani Agriteknologi Nusantara
+            </div>
+            </div>
+          </div>
+        </div>
+</body>
+
+
+
 </html>
