--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
       </div>
 
       <div class="utama">
-        <a target="_blank" href="">"Buah yang manis hanya bisa dipetik dari pemilihan bibit yang baik dan cara menanam yang benar"</a>
+        <a onclick="myFunction()" target="_blank">"Buah yang manis hanya bisa dipetik dari pemilihan bibit yang baik dan cara menanam yang benar"</a>
+        <script>
+          function myFunction() {
+          alert("Selamat bercocok tani");
+        }
+        </script>
       </div>
 
 <div class="text-search">
