--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
 	<title>Sign in - Bercocok Tani
     </title>
 	<link rel="stylesheet" type="text/css" href="login.css">
+	<script src="JS.js"></script>
 </head>
 <body>
  
@@ -12,14 +13,14 @@
 	<div class="kotak_login">
 		<p class="tulisan_login">Silahkan login</p>
  
-		<form onsubmit="">
+		<form onsubmit="return validationLogin()">
 			<label>Username</label>
-			<input type="text" name="username" class="form_login" placeholder="Username atau email .." required="required">
+			<input type="text" name="username" id="username" class="form_login" placeholder="Username atau email .." required="required">
  
 			<label>Password</label>
-			<input type="password" name="password" class="form_login" placeholder="Password .." required="required">
+			<input type="password" name="password" id="passwrod" class="form_login" placeholder="Password .." required="required">
             
-			<a href="index2.html" input type="submit" class="tombol_login" value="LOGIN">
+			<a onclick="myFunction()" href="index2.html" input type="submit" class="tombol_login" value="LOGIN">
             LOGIN</a>
 			<br/>
 			<br/>
@@ -31,6 +32,11 @@
 			<center>
 				<a class="link" href="index.html">Kembali</a>
 			</center>
+			<script>
+          function myFunction() {
+          alert("Selamat bercocok tani");
+        }
+        </script>
 		</form>
 		
 	</div>
