--- a/buah pepaya.html
+++ b/buah pepaya.html
@@ -48,7 +48,7 @@
             Log Out</a>
           <a href="index2.html">Home</a>
           <a href="about2.html">About Us</a>
-          <a href="artikel.html" style="color:#f2bb85;">Artikel</a>
+          <a href="artikel2.html" style="color:#f2bb85;">Artikel</a>
           <a href="contact2.html">Contact Us</a>
         </div>
       </div>
